--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,14 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              {
+                  "input": "./node_modules/bootstrap/dist/css/bootstrap.css"
+              },
+              "node_modules/ngx-toastr/toastr.css",
+              {
+                "input": "./node_modules/ngx-toastr/toastr.css"
+            },
               "src/styles.css"
             ],
             "scripts": []
@@ -91,7 +99,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "node_modules/bootstrap/dist/css",
+              "src/styles.css",
+              "node_modules/ngx-toasts/toastr.css"
             ],
             "scripts": []
           }
