--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.9",
-    "@angular/common": "~11.2.9",
+    "@angular/common": "^11.2.9",
     "@angular/compiler": "~11.2.9",
-    "@angular/core": "~11.2.9",
+    "@angular/core": "^11.2.9",
     "@angular/forms": "~11.2.9",
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@tinymce/tinymce-angular": "^4.2.2",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
+    "ngx-toastr": "^13.2.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -27,6 +35,7 @@
     "@angular-devkit/build-angular": "~0.1102.8",
     "@angular/cli": "~11.2.8",
     "@angular/compiler-cli": "~11.2.9",
+    "@types/core-js": "^2.5.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -37,6 +46,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ngx-webstorage": "7.0.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
